# omni-table

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main  main.cpp
.github/workflows/: linux_ubuntu.yml  macos-latest.yml  windows_latest.yml
benchmark_test/: CMakeLists.txt  TableBenchmark.cpp  table_benchmark.cpp
cmake/: AddBenchmark.cmake  AddGTest.cmake  CompilerWarnings.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  SimpleTable.cpp  multiple_styling.cpp  non_subscript_table.cpp
src/: CMakeLists.txt  cell.cpp  cell.h  formatter.cpp  formatter.h  row.cpp  row.h  table.cpp  table.h
tests/: CMakeLists.txt  SimpleTest.t.cpp  TableTest.t.cpp
